Small fixes.